<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skill_bg"
    android:orientation="vertical"
    tools:context=".skillsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="SKILLS"
            android:textSize="45dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/mylotti"
            android:layout_width="0dp"
            android:layout_height="400dp"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/skill" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="List of Skills:-"
        android:textSize="35dp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/skill_list_bg"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Programming\nLanguages"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/programmingLanguage"
                        android:textSize="20dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/skill_list_bg"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Programming\nConsepts"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/programmingConcepts"
                        android:textSize="20dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/skill_list_bg"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Android Development"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/androidDevelopment"
                        android:textSize="20dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/skill_list_bg"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Soft Skills"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/softSkills"
                        android:textSize="20dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/skill_list_bg"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Developer Tools"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/developerTool"
                        android:textSize="20dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/skill_list_bg"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Additional Skills"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/additionalSkills"
                        android:textSize="20dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>